--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -60,8 +60,8 @@
 .form__select {
   display: block;
   width: 70px;
-  height: 35px;
-  padding: .275rem .45rem .375rem .4rem;
+  height: 37px;
+  padding-left: .375rem;
   font-weight: 400;
   line-height: 1.5;
   color: #bababa;
@@ -77,7 +77,7 @@
 }
 
 .form__select-item {
-  padding: .275rem .45rem .375rem .4rem;
+  padding-left: .375rem;
 }
 
 .form__check {
@@ -111,6 +111,7 @@
 .btn {
   display: inline-block;
   width: 100px;
+  height: 37px;
   text-align: center;
   vertical-align: middle;
   color: #2b2b2b;
@@ -119,7 +120,6 @@
   line-height: 1.5;
   border-radius: .25rem;
   border: 1px solid #ffc107;
-  padding: .375rem .75rem;
   background-color: #ffc107;
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
